fix observer-can-run icon alignment

--- a/frontend/pages/queries/ManageQueriesPage/_styles.scss
+++ b/frontend/pages/queries/ManageQueriesPage/_styles.scss
@@ -179,6 +179,7 @@
     .query-icon {
       position: relative;
       top: 2px;
+      display: block;
     }
   }
 }
